Fix placement of ASL bundles

BUG: 446706